# shyr_c

./: .ccls  .clang-format  .clangd  .gitignore  LICENSE  README.md  flake.nix  justfile  makefile  meson.build  meson.options
examples/: meson.build  minimal.c
shyr/: config.h  init.h  mesh.h  meson.build  rhs.h  shyr.c  shyr.h  state.h  time.h
shyr/config/: config.h
shyr/mesh/: mesh.h
shyr/state/: state.h
